samples/_failures_safe/1761308564_fe9a76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_332cbb5b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_332cbb5b.c:151:44: error: expected ‘]’ at end of input
  151 |                 tokens[token_count].value[1
      |                                            ^
      |                                            ]
./samples/SAFE/__tmp_332cbb5b.c:151:17: error: expected declaration or statement at end of input
  151 |                 tokens[token_count].value[1
      |                 ^~~~~~
./samples/SAFE/__tmp_332cbb5b.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_332cbb5b.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_332cbb5b.c:151:17: error: expected declaration or statement at end of input
